# agent-economy-os

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  clean_tree.txt  pyproject.toml  railway.toml  requirements.txt  server.json  tree.py  tree.txt
.well-known/: agent-card.json  mcp.json
.well-known/mcp/: server-card.json
app/: analytics.py  audit.py  auth.py  billing.py  cache.py  config.py  errors.py  identity.py  limits.py  main.py  metering.py  payments.py  proxy.py  rate_limit.py  routing.py  supabase.py
app/identity/: __init__.py  onchain.py
app/middleware/: x402.py
app/verticals/: __init__.py  base.py  compliance.py  data.py  finance.py  healthcare.py  marketing.py
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: architecture.md
sdk/uaeos/: __init__.py  client.py
supabase/: schema.sql
tests/: test_payments.py  test_proxy.py  test_redis_fallback.py
