[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uaeos-sdk"
version = "0.1.0"
description = "Universal Agent Economy OS - Official Python SDK for MCP/A2A-native credential injection and x402 micropayments."
authors = [
    {name = "UAE OS Team", email = "hello@uaeos.dev"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["agents", "mcp", "a2a", "micropayments", "proxy", "sdk", "fastapi", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/uaeos/uaeos"
Repository = "https://github.com/uaeos/uaeos"
Documentation = "https://github.com/uaeos/uaeos#readme"

[tool.setuptools.packages.find]
where = ["sdk"]
include = ["uaeos*"]
